# zanistarast-papers

./: README.md
agent/: 02-agent-architecture.md
core-review/: 01-primitive-definitions-audit.md  02-ehad-audit.md  03-vahid-audit.md  04-yek-audit.md  05-hebun-audit.md  06-zanabun-audit.md  07-mabun-audit.md  08-rabun-audit.md  09-rasterast-audit.md  10-primitive-chain-audit.md  11-core-axioms-audit.md  12-axiom-independence-audit.md  13-core-theorems-audit.md  14-proof-audit.md  15-mathematical-consistency-audit.md  16-native-architecture-audit.md  17-native-implementation-audit.md  18-formal-specifications-audit.md  19-domain-frameworks-audit.md  20-architecture-consistency-audit.md  21-terminology-standard.md  22-mathematical-notation-standard.md  23-naming-convention-standard.md  24-documentation-standard.md  25-certified-core-v1.0.md  26-core-freeze-policy.md
formal-foundations/: 01-ontological-foundations.md  02-ontological-layers.md  03-6-plus-tek-mathematics.md  04-6-plus-ehad-mathematics.md  05-physical-biological-mental-spiritual-ethical-judgment.md  06-recursive-ontology.md
foundations/: ZANISTARAST_CONSTITUTION.md  foundational-assumptions.md  foundational-principles.md  research-hypotheses.md
phase-d/: 01-mathematical-extensions-overview.md  02-vahid-mathematics.md
phase-g/: 01-academic-ecosystem-overview.md  02-book-series-architecture.md  03-peer-reviewed-publication-framework.md  04-doi-isbn-strategy.md  05-documentation-standards.md  06-citation-policy.md  07-research-dissemination.md  08-academic-certification.md  09-academic-applications.md
phase-h/: 01-open-specification.md  02-developer-guide.md  03-tutorials.md  04-certification-program.md  05-versioning-policy.md  06-governance-rules.md  07-change-management.md  08-community-contributions.md  09-governance-applications.md
phase-i/: 01-zanistarast-v1-release.md  02-github-release-structure.md  03-distribution-packages.md  04-documentation-site.md  05-release-certification.md  (+2 more)
reference-implementation/: CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md
reference-implementation/.github/workflows/: benchmark.yml  rust-ci.yml
reference-implementation/ai/: Cargo.toml
reference-implementation/ai/src/: anthropic_provider.rs  anthropic_responses.rs  api_key_manager.rs  configured_provider.rs  gemini_provider.rs  gemini_responses.rs  lib.rs  llamacpp_provider.rs  ollama_provider.rs  openai_provider.rs  openai_responses.rs  provider.rs  provider_config.rs  provider_factory.rs  provider_loader.rs  provider_registry.rs  provider_selector.rs
reference-implementation/ai/tests/: anthropic_live.rs  anthropic_provider.rs  gemini_live.rs  gemini_provider.rs  llamacpp_live.rs  native_ai_provider.rs  ollama_generate_request.rs  ollama_generate_response.rs  ollama_live.rs  ollama_provider.rs  ollama_provider_config.rs  openai_live.rs  openai_provider.rs  openai_provider_test.rs  openai_response_deserialization.rs  openai_response_request.rs  provider_factory_test.rs
reference-implementation/benchmarks/: Cargo.toml
reference-implementation/benchmarks/src/: main.rs
reference-implementation/certification/: Cargo.toml
reference-implementation/certification/src/: lib.rs
reference-implementation/cli/: Cargo.toml
reference-implementation/cli/src/: main.rs
reference-implementation/cli/tests/: cli_end_to_end.rs
reference-implementation/config/: providers.toml  runtime.toml
reference-implementation/core/: Cargo.toml
reference-implementation/core/src/: config.rs  config_loader.rs  lib.rs  provider.rs  provider_registry.rs
reference-implementation/core/tests/: provider_registry.rs
reference-implementation/docs/: architecture.md  getting-started.md  independent-validation.md  production-readiness.md  provider-development.md  verification.md
reference-implementation/examples/: config_usage.rs  end_to_end.rs  provider_registry.rs
reference-implementation/kernel/: Cargo.toml
reference-implementation/kernel/src/: lib.rs
reference-implementation/mira/: Cargo.toml  MIRA_CONSTITUTION.md
reference-implementation/mira-api/: Cargo.toml
reference-implementation/mira-api/src/: auth.rs  main.rs  session.rs
reference-implementation/mira-pwa/: api-client.js  app.js  config.js  index.html  manifest.webmanifest  service-worker.js
reference-implementation/mira-pwa/icons/: README.md
reference-implementation/mira/src/: academic_pipeline.rs  academic_report.rs  academic_rules.rs  academic_runner.rs  agent_dispatch.rs  approval_workflow.rs  article_analysis_adapter.rs  article_analysis_service.rs  article_candidate_analysis.rs  article_classifier.rs  article_file_analyzer.rs  article_inventory.rs  article_templates.rs  bibtex_generator.rs  bibtex_parser.rs  chat_interface.rs  chat_orchestrator.rs  chat_service.rs  chat_session.rs  citation_reference_matcher.rs  command_router.rs  content_signal_detector.rs  doi_validator.rs  full_academic_scan.rs  inventory_academic_runner.rs  knowledge_map.rs  latex_generator.rs  lib.rs  provider_bridge.rs  provider_executor.rs  publication_priority.rs  rasterast_review.rs  recommendation_report.rs  reference_signal_detector.rs  repository_academic_scan.rs  repository_scanner.rs  result_collector.rs  source_verification_report.rs  task_engine.rs  template_sections.rs  (+4 more)
reference-implementation/mira/tests/: content_signal_detector.rs
reference-implementation/registry/: Cargo.toml
reference-implementation/registry/src/: lib.rs
reference-implementation/registry/tests/: registry_invariants.rs
reference-implementation/runtime/: Cargo.toml
reference-implementation/runtime/src/: lib.r  lib.rs
reference-implementation/runtime/tests/: end_to_end_failure.rs  end_to_end_success.rs  runtime_replay.rs
reference-implementation/verification/: Cargo.toml
reference-implementation/verification/src/: lib.rs
(+420 files in other folders)
