[package]
name = "zanistarast-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zanistarast-core = { path = "../core" }
zanistarast-kernel = { path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true

toml.workspace = true
tracing.workspace = true






