[package]
name = "zanistarast-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zanistarast-core = { path = "../core" }
zanistarast-runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true



