[package]
name = "zanistarast-certification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zanistarast-core = { path = "../core" }
zanistarast-verification = { path = "../verification" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true




