[package]
name = "zanistarast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zanistarast-core = { path = "../core" }
zanistarast-ai = { path = "../ai" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true



