[package]
name = "zanistarast-mira-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
subtle = "2"
tower = { version = "0.5", features = ["util"] }

zanistarast-mira = { path = "../mira" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
